--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,4 +1,5 @@
 nav {
+  overflow: hidden;
   position: fixed;
   top : 0;
   z-index : 0;
@@ -11,5 +12,6 @@ nav {
 
 nav span {
   font-family : 'Bungee', sans-serif;
+  font-size: 1.5em;
   color: #FFFFFF;
 }
