--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,6 +24,12 @@ body {
 nav {
   font-family: 'Bungee', sans-serif;
 }
+
+main {
+  width: 90%;
+  margin: auto;
+
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
