--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,7 +3,7 @@ nav {
   position: fixed;
   top : 0;
   z-index : 0;
-  background-color: #4056A1;
+  background-color: #501B1D;
   padding : 1.5em;
   width: 100%;
   height: 120px;
@@ -15,3 +15,6 @@ nav span {
   font-size: 1.5em;
   color: #FFFFFF;
 }
+
+
+
