--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,17 +6,20 @@ nav {
   position: fixed;
   top : 0;
   z-index : 1;
-  background-color: #501B1D;
+  background-color: transparent;
+  /* background-image: linear-gradient(to right,#1E152A, #EFEFEF); */
   padding : 1.5em;
   width: 100%;
-  height: 120px;
+  height: 100px;
 
 }
 
 nav span {
   font-family : 'Bungee', sans-serif;
   font-size: 1.5em;
-  color: #FFFFFF;
+  color: #CCE0FF;;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
 }
 
 nav div {
@@ -31,7 +34,14 @@ nav div p span {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 20px;
   font-weight: 700;
-  
+}
+
+nav i {
+  font-size: 0.75em;
+  color: #94B0DA;
+
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: white;
 }
 
 nav div p {
@@ -40,12 +50,8 @@ nav div p {
   font-size: 20px;
   color: #FFFFFF;
   font-weight: 300;
-}
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
-nav div img {
-  height: 10px;
-  animation-duration: 3s;
-  animation-name: slidein;
 }
 
 nav div div {
@@ -53,23 +59,16 @@ nav div div {
   justify-content: center;
 }
 
-
 .arrow {
-  position: absolute;
-  bottom: 5px;
+  margin-bottom: 8px;
+  position: absolute; 
   height: 25px;
   animation-name: sliding-vertically;
   animation-duration: 2s;
   animation-iteration-count: infinite;
   background-color: transparent;
-  color: white;
-
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: tomato;
- 
   cursor: pointer;
 }
-
 
 @keyframes sliding-vertically {
   from {
@@ -83,4 +82,27 @@ nav div div {
   to {
     bottom: 5px;
   }
+}
+
+@media (min-width: 700px) {
+  nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    overflow: hidden;
+    position: fixed;
+    top : 0;
+    z-index : 1;
+    background-color: #1E152A;
+    /* background-image: linear-gradient(to right,#1E152A, #EFEFEF); */
+    padding : 1.5em;
+    width: 100%;
+    height: 100px;
+  
+  }
+
+  nav span {
+    color: #FFFFFF;
+  }
+
 }
